--- a/CTF_SYSTEM_MOYEN/src/index.html
+++ b/CTF_SYSTEM_MOYEN/src/index.html
@@ -1,15 +1,54 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Index of / on 127.0.0.1:21</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page d'accueil</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            font-size: 18px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+        }
+
+        a:hover {
+            color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-<h1>Index of / on 127.0.0.1:21</h1>
-<hr>
-<pre>
-  2023 Nov 16 16:03  File        <a href="ftp://john:KiKawa_9123@127.0.0.1:21/flag.txt">flag.txt</a>  (63 bytes)
-  2023 Nov 16 16:04  File        <a href="ftp://john:KiKawa_9123@127.0.0.1:21/indice.txt">indice.txt</a>  (16 bytes)
-  2023 Nov 17 13:06  File        <a href="ftp://john:KiKawa_9123@127.0.0.1:21/message.txt">message.txt</a>  (3 bytes)
-</pre>
+
+    <header>
+        <h1>Bienvenue sur notre page d'accueil !</h1>
+    </header>
+        <p>Y'a pas d'info ici !</p>
+    	<p>Si vous voulez plus d'informations, cliquez sur le lien ci-dessous :</p>
+    
+    	<a href="info.html">Page d'informations</a>
+
 </body>
 </html>
