--- a/CTF_SYSTEM_MOYEN/src/index.html
+++ b/CTF_SYSTEM_MOYEN/src/index.html
@@ -48,7 +48,7 @@
         <p>Y'a pas d'info ici !</p>
     	<p>Si vous voulez plus d'informations, cliquez sur le lien ci-dessous :</p>
     
-    	<a href="info.html">Page d'informations</a>
+    	<a href="login.php">Page d'authentification</a>
 
 </body>
 </html>
